--- a/src/data/kalarmui.rc
+++ b/src/data/kalarmui.rc
@@ -56,6 +56,7 @@
    <text>Actions</text>
    <Action name="undelete" />
    <Action name="disable" />
+   <Action name="skip" />
    <Separator/>
    <Action name="alarmsEnable" />
    <Action name="refreshAlarms" />
@@ -84,6 +85,7 @@
   <Separator/>
   <Action name="undelete" />
   <Action name="disable" />
+  <Action name="skip" />
   <Separator/>
   <Action name="createTemplate" />
   <Action name="export" />
